# c-skel

./: CMakeLists.txt  Makefile.am  README  args.c  args.h  configure.ac  io.h  log.c  log.h  main.c  main.h  unix-socket.c  unix-socket.h
